Refs #72123 CCA: Added comments visible only to authentificated user and fixed some breadcrumb titles.

--- a/eea/climateadapt/theme/climateadapt/static/style.css
+++ b/eea/climateadapt/theme/climateadapt/static/style.css
@@ -1896,6 +1896,10 @@ li.dropdown-submenu {
     color: #12617d !important;
 }
 
+.subsection-urban-adaptation-climatic-threats-heat-waves #content table a:hover {
+    color: #12617d !important;
+}
+
 .subsection-urban-adaptation-climatic-threats-droughts #content table {
     line-height: 1.8em !important;
 }
